create lobby selector command.